--- a/YTubers.Web/appsettings.json
+++ b/YTubers.Web/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "YouTubeData": {
-    "APIKey": "AIzaSyDyk3hpWaydbaQVN05C2vk56ASvsczfwqU",
+    "APIKey": "",
     "ApplicationName": "YuTubers"
   }
 }
